<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home"
        android:title="@string/nav_title_home"/>

    <item
        android:id="@+id/nav_history"
        android:icon="@drawable/ic_history"
        android:title="@string/nav_title_history"/>

    <!-- Blank Placeholder for the FAB Cutout -->
    <item
        android:id="@+id/nav_placeholder"
        android:title=""
        android:enabled="false"/>

    <item
        android:id="@+id/nav_defects"
        android:icon="@drawable/ic_bug"
        android:title="@string/nav_title_defects"/>

    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/nav_title_settings"/>
</menu>